--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "format": "prettier . --write --ignore-path .gitignore"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "framer-motion": "^7.5.3",
     "react": "18.1.0",
     "react-native": "0.70.2",
+    "react-native-reanimated": "^2.11.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
